--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment android:id="@+id/main_browse_fragment"
-          android:name="de.stefanmedack.ccctv.MainFragment"
+          android:name="de.stefanmedack.ccctv.ui.main.MainFragment"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          tools:context="de.stefanmedack.ccctv.MainActivity"
+          tools:context="de.stefanmedack.ccctv.ui.main.MainActivity"
           tools:deviceIds="tv"
           tools:ignore="MergeRootFrame"
     />
