adds speaker to DetailFragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="search_opaque">#ffaa3f</color>
     <color name="selected_background">#ffaa3f</color>
     <color name="default_background">#3d3d3d</color>
+    <color name="unfocused_speaker">#CCCCCC</color>
+    <color name="focused_speaker">#FFFFFF</color>
 </resources>
