--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <dimen name="grid_card_width">200dp</dimen>
+    <!--TODO Test quad -->
+    <!--<dimen name="grid_card_height">200dp</dimen>-->
+    <!--TODO Test 4:3-->
+    <dimen name="grid_card_height">150dp</dimen>
+    <!--TODO Test 16:9-->
+    <!--<dimen name="grid_card_height">112.5dp</dimen>-->
+
     <dimen name="event_card_width">300dp</dimen>
     <dimen name="event_card_height">170dp</dimen>
 
