adds some transitions to EventsActivity/Fragment

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="detailsDescriptionSubtitleStyle">@style/CCCDescriptionSubtitleStyle</item>
     </style>
 
+    <style name="EventsActivityTheme" parent="Theme.Leanback.VerticalGrid">
+        <!--<item name="android:windowBackground">@drawable/voctocat</item>-->
+    </style>
+
     <style name="CCCDescriptionSubtitleStyle" parent="Widget.Leanback.DetailsDescriptionSubtitleStyle">
         <item name="android:maxLines">20</item>
     </style>
