updates glide library and fixes image cropping problems on conference tiles

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
     <style name="GridCardImageStyle" parent="Widget.Leanback.ImageCardView.ImageStyle">
         <item name="android:layout_width">@dimen/grid_card_width</item>
         <item name="android:layout_height">@dimen/grid_card_height</item>
+        <item name="android:scaleType">fitCenter</item>
     </style>
 
     <style name="ConferenceCardStyle" parent="Theme.Leanback">
