--- a/app/src/main/res/drawable/qr_github.xml
+++ b/app/src/main/res/drawable/qr_github.xml
@@ -1,8 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="240dp"
-        android:height="240dp"
-        android:viewportHeight="1160.0"
-        android:viewportWidth="1160.0"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="240dp"
+    android:height="240dp"
+    android:viewportHeight="1160.0"
+    android:viewportWidth="1160.0"
     >
     <path
         android:fillColor="#FFFFFF"
